test/errors/return1.qk

#OUTPUT
#Syntax Error: Invalid token in expression.
# -> [13] return =
#
#END

#RET 1

extern func printf(s:str, ...)

func main -> int
    return =
end

